--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -12,7 +12,7 @@ Index Page
             <tr>
               <th scope="col">Portfolio Name</th>
               <th scope="col">Start Date</th>
-              <th scope="col">Start amount</th>
+              <th scope="col"></th>
               <th scope="col"></th>
             </tr>
           </thead>
@@ -21,10 +21,15 @@ Index Page
             <tr>
               <th scope="row">{{ portfolio[1] }}</th>
               <td>{{ portfolio[2] }}</td>
-              <td>{{ portfolio[3] }}</td>
               <td><form action="#" method="post">
+                  <input type="hidden" name="req" value="get_coins">
                   <input type="hidden" name="portfolio_id" value="{{ portfolio[0] }}">
                   <input type="submit" class="btn btn-outline-success" name="get_coin" value="Show coins">
+              </form></td>
+              <td><form action="#" method="post">
+                  <input type="hidden" name="req" value="delete_portfolio">
+                  <input type="hidden" name="portfolio_id" value="{{ portfolio[0] }}">
+                  <input type="submit" class="btn btn-danger" name="delete_portfolio" value="Delete portfolio">
               </form></td>
             </tr>
             {% endfor %}
