--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for("platform_list") }}">Platforms</a>
+              <a class="nav-link" href="{{ url_for("news") }}">News</a>
+            </li>
+              <li class="nav-item">
+              <a class="nav-link" href="{{ url_for("show_all_alarms") }}">Alarms</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for("show_all_transfers") }}">Transfers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for("list_all_orders") }}">Placed Orders</a>
+            </li>
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Platforms
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="{{ url_for("platform_list") }}">Platforms</a></li>
+            <li><a class="dropdown-item" href="{{ url_for("list_platform_usage") }}">Show platform usage stats</a></li>
+          </ul>
             </li>
           <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -26,7 +44,19 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="{{ url_for("coin_list") }}">Coins</a></li>
             <li><a class="dropdown-item" href="{{ url_for("coins_with_listing") }}">Show coins with listing</a></li>
+               <li><a class="dropdown-item" href="{{ url_for("show_coin_usage") }}">Show coin usage stats</a></li>
           </ul>
+            </li>
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Portfolio
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="{{ url_for("home") }}">Show portfolios</a></li>
+            <li><a class="dropdown-item" href="{{ url_for("dump_all_portfolios") }}">Dump all portfolios</a></li>
+            <li><a class="dropdown-item" href="{{ url_for("show_all_user_amounts") }}">Show total user amounts(USD)</a></li>
+          </ul>
+
             </li>
           </ul>
         </div>
