--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -7,6 +7,7 @@ Index Page
     <table class="table table-success table-borderless">
       <thead class=table-dark">
         <tr>
+          <th scope="col">List ID</th>
           <th scope="col">Coin name</th>
           <th scope="col">Platform</th>
           <th scope="col">Amount</th>
@@ -18,6 +19,7 @@ Index Page
           <th scope="row">{{ coin[0] }}</th>
           <td>{{ coin[1] }}</td>
           <td>{{ coin[2] }}</td>
+          <td>{{ coin[3] }}</td>
         </tr>
         {% endfor %}
       </tbody>
